RESOLVED FIXED182877
[Extra zoom mode] Form control values are stale after dismissing and representing input view controllers
https://bugs.webkit.org/show_bug.cgi?id=182877
Summary [Extra zoom mode] Form control values are stale after dismissing and represen...
Wenson Hsieh
Reported 2018-02-16 09:50:34 PST
Attachments
Patch (21.88 KB, patch)
2018-02-17 15:35 PST, Wenson Hsieh
no flags
Fix non-iOS builds (21.79 KB, patch)
2018-02-17 15:45 PST, Wenson Hsieh
no flags
ChangeLog tweaks. (22.26 KB, patch)
2018-02-17 17:35 PST, Wenson Hsieh
thorton: review+
Patch for landing (22.25 KB, patch)
2018-02-17 21:14 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-02-17 15:35:48 PST
Wenson Hsieh
Comment 2 2018-02-17 15:45:55 PST
Created attachment 334111 [details] Fix non-iOS builds
Wenson Hsieh
Comment 3 2018-02-17 17:35:40 PST
Created attachment 334112 [details] ChangeLog tweaks.
Tim Horton
Comment 4 2018-02-17 20:17:04 PST
Comment on attachment 334112 [details] ChangeLog tweaks. View in context: https://bugs.webkit.org/attachment.cgi?id=334112&action=review > Source/WebKit/Shared/AssistedNodeInformation.h:117 > + unsigned assistedNodeIdentifier { 0 }; maybe a sized type? We usually use uint64 for IDs
Wenson Hsieh
Comment 5 2018-02-17 20:58:48 PST
Comment on attachment 334112 [details] ChangeLog tweaks. View in context: https://bugs.webkit.org/attachment.cgi?id=334112&action=review Thanks for the review! >> Source/WebKit/Shared/AssistedNodeInformation.h:117 >> + unsigned assistedNodeIdentifier { 0 }; > > maybe a sized type? We usually use uint64 for IDs Got it — changed to a `uint64_t` instead.
Wenson Hsieh
Comment 6 2018-02-17 21:14:36 PST
Created attachment 334114 [details] Patch for landing
WebKit Commit Bot
Comment 7 2018-02-17 21:50:19 PST
Comment on attachment 334114 [details] Patch for landing Clearing flags on attachment: 334114 Committed r228602: <https://trac.webkit.org/changeset/228602>
Note You need to log in before you can comment on or make changes to this bug.